Bug 454555 - Python class name have a colon in one case in the Symbols Viewer
Summary: Python class name have a colon in one case in the Symbols Viewer
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 21.12.3
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-29 08:43 UTC by Alain Laporte
Modified: 2022-06-06 10:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alain Laporte 2022-05-29 08:43:53 UTC
SUMMARY

Python class name have a colon at the end in one case in the Symbols Viewer.

STEPS TO REPRODUCE
1. Create a file like:

class MyClass:

2. Check the Symbols Viewer

OBSERVED RESULT

The class name is:

MyClass:

EXPECTED RESULT

the class name must be:

MyClass

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-05-29 08:45:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/754
Comment 2 Alain Laporte 2022-06-06 10:53:11 UTC
Git commit 804e2aa3872e0643b894886db623d30a329f86a3 by Alain Laporte.
Committed on 03/06/2022 at 15:46.
Pushed by waqar into branch 'master'.

Remove colon left in some class declaration

Fixed declaration:

class MyClass:

M  +1    -0    addons/symbolviewer/python_parser.cpp

https://invent.kde.org/utilities/kate/commit/804e2aa3872e0643b894886db623d30a329f86a3