Remove colon left in some class declaration

Fixed declaration:

class MyClass:

BUG: 454555